# abigail

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
abigail/: ai_client.py  config.py  persistence.py  prompt_builder.py  translations.py
abigail/ui/: interface.py
tests/: test_config.py
